# STM32CoreMarkCsolution

./: .gitignore
CoreMark_Csolution/: coremark.cbuild-idx.yml  coremark.cbuild-pack.yml  coremark.csolution.yml
CoreMark_Csolution/STM32CubeMX/F4_DISC/: coremark.cgen.yml  project.script
CoreMark_Csolution/STM32CubeMX/F4_DISC/MX_Device/: MX_Device.h
CoreMark_Csolution/STM32CubeMX/F4_DISC/STM32CubeMX/: .mxproject  STM32CubeMX.ioc  compile_commands.json
CoreMark_Csolution/STM32CubeMX/F4_DISC/STM32CubeMX/Inc/: core_portme.h  coremark.h
CoreMark_Csolution/STM32CubeMX/F4_DISC/STM32CubeMX/STM32CubeIDE/: .cproject  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld
CoreMark_Csolution/STM32CubeMX/F4_DISC/STM32CubeMX/Src/: core_main.c  ee_printf.c  main.c  syscalls.c
CoreMark_Csolution/benchmark/: coremark.Debug+F4_DISC.cbuild.yml  coremark.Release+F4_DISC.cbuild.yml  coremark.cproject.yml
CoreMark_Csolution/benchmark/RTE/_Debug_F4_DISC/: RTE_Components.h
CoreMark_Csolution/benchmark/RTE/_Release_F4_DISC/: RTE_Components.h
CoreMark_Csolution/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
CoreMark_Csolution/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
CoreMark_Csolution/tmp/coremark.Debug+F4_DISC/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
CoreMark_Csolution/tmp/coremark.Debug+F4_DISC/src/coremark.Debug+F4_DISC-stamp/: coremark.Debug+F4_DISC-configure-.cmake  coremark.Debug+F4_DISC-database-.cmake  coremark.Debug+F4_DISC-source_dirinfo.txt
CoreMark_Csolution/tmp/coremark.Debug+F4_DISC/tmp/: coremark.Debug+F4_DISC-cfgcmd.txt  coremark.Debug+F4_DISC-mkdirs.cmake
cmsis_toolbox_gen/: prep.Debug+MyBoard.cbuild.yml  prep.Release+MyBoard.cbuild.yml  prep.cbuild-idx.yml  prep.cproject.yml  prep.csolution.yml
cmsis_toolbox_gen/RTE/Device/STM32F407VGTx/: regions_STM32F407G-DISC1.h
cmsis_toolbox_gen/RTE/_Debug_MyBoard/: RTE_Components.h
cmsis_toolbox_gen/RTE/_Release_MyBoard/: RTE_Components.h
cmsis_toolbox_gen/STM32CubeMX/MyBoard/: prep.cgen.yml  project.script
cmsis_toolbox_gen/STM32CubeMX/MyBoard/MX_Device/: MX_Device.h
cmsis_toolbox_gen/STM32CubeMX/MyBoard/STM32CubeMX/: .mxproject  STM32CubeMX.ioc
cmsis_toolbox_gen/STM32CubeMX/MyBoard/STM32CubeMX/Inc/: usbh_conf.h
cmsis_toolbox_gen/STM32CubeMX/MyBoard/STM32CubeMX/STM32CubeIDE/: .cproject  .project
cmsis_toolbox_gen/STM32CubeMX/MyBoard/STM32CubeMX/Src/: usbh_conf.c
cmsis_toolbox_gen/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  prep.Debug+MyBoard.cbuild-gen.yml  prep.cbuild-gen-idx.yml  roots.cmake
cmsis_toolbox_gen/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmsis_toolbox_gen/tmp/2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmsis_toolbox_gen/tmp/prep.Debug+MyBoard/: CMakeLists.txt  groups.cmake
cmsis_toolbox_gen/tmp/prep.Debug+MyBoard/src/prep.Debug+MyBoard-stamp/: prep.Debug+MyBoard-configure-.cmake  prep.Debug+MyBoard-database-.cmake  prep.Debug+MyBoard-source_dirinfo.txt
cmsis_toolbox_gen/tmp/prep.Debug+MyBoard/tmp/: prep.Debug+MyBoard-mkdirs.cmake
cmsis_toolbox_gen/tmp/prep.Release+MyBoard/: CMakeLists.txt
cmsis_toolbox_gen/tmp/prep.Release+MyBoard/src/prep.Release+MyBoard-stamp/: prep.Release+MyBoard-configure-.cmake  prep.Release+MyBoard-database-.cmake  prep.Release+MyBoard-source_dirinfo.txt
cmsis_toolbox_gen/tmp/prep.Release+MyBoard/tmp/: prep.Release+MyBoard-cfgcmd.txt  prep.Release+MyBoard-mkdirs.cmake
coremark_bm/: coremark.cproject.yml
coremark_bm/Boards/STM32F4_DISCOVERY/: coremark.cproject.yml  coremark.csolution.yml
coremark_bm/coremark_layer/: coremark.clayer.yml
coremark_bm/coremark_layer/includes/: core_portme.h  coremark.h
coremark_bm/coremark_layer/src/: core_main.c  core_portme.c
(+106 files in other folders)
